
  [ Michael Vogt ]
  * include full AUTHORS info into the about dialog,
    based on the lp:~adnane002/software-center/fix.632770
    branch (LP: #632770)
  * data/ui/SoftwareCenter.ui:
    - add translator_credits (LP: #632770), thanks to 
      Adnane Belmadiaf 

  [ Kiwinote ]
  * softwarecenter/app.py:
    - don't crash on pressing backspace in the history pane (LP: #696639)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 03 Jan 2011 14:15:47 +0100

software-center (3.1.9) natty; urgency=low

  [ Gary Lasker ]
  * softwarecenter/view/purchaseview.py:
    - restore terms of service popup window
  * softwarecenter/app.py,
    softwarecenter/enums.py,
    softwarecenter/view/availablepane.py,
    softwarecenter/view/basepane.py,
    softwarecenter/view/softwarepane.py,
    softwarecenter/view/viewswitcher.py:
    softwarecenter/view/channelpane.py,
    softwarecenter/view/installedpane.py:
    - re-implement reinstall previous purchases view as a subview
      of the top-level Get Software view (LP: #628404) 
    - use init_view to defer loading of the channel and installed
      pane views, provides further startup time improvement

  [ Michael Vogt ]
  * merged lp:~aaronp/software-center/usc-605048:
    Alters db update behaviour to stop 'rebuilding' window appearing while
    xapian db is being updated on detecting an externally changed cache.
    Instead, updates a new copy of the xapian db, then once finished,
    renamed to be the new xapian db.
  * test/test_gui.py:
    - add test for reinstall previous purchase UI

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 22 Dec 2010 14:08:46 +0100

software-center (3.1.8) natty; urgency=low

  [ Michael Vogt ]
  * softwarecenter/backend/restfulclient.py:
    - honor UBUNTU_SSO_SERVICE
  * softwarecenter/plugin.py:
    - ignore plugin init failures
  * softwarecenter/view/appdetailsview_gtk.py:
    - add helper to obtain xy position of the appicon in the view

  [ Gary Lasker ]